Completed the first version of the layout

--- a/index.html
+++ b/index.html
@@ -3,7 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Business Blog Card</title>
   </head>
-  <body></body>
+  <body>
+    <div class="card">
+      <div class="card__image">
+        <img src="./images/hero-image-business-card.png" alt="bg-image" />
+        <img src="./images/white-overlay.svg" alt="overlay" />
+      </div>
+      <div class="card__content">
+        <h1 class="card__title">Perfect solution for small business</h1>
+        <p>
+          Small businesses need to generate leads to grow. You can use tools
+          like Ringy.
+        </p>
+      </div>
+      <div class="profile__footer">
+        <img
+          src="./images/avatar-image-business-card.png"
+          alt="avatar-img"
+          class="profile__img"
+        />
+        <div class="profile__details">
+          <h1 class="profile__name">Amy Burgess</h1>
+          <h3 class="profile__designation">Customer Manger, Solution Oy</h3>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
